# TraceSmith

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INTEGRATION_PROGRESS.md  README.md  counter_trace.json  frame_capture.json  kineto_schema_trace.json  perfetto_enhanced_trace.json  phase3_trace.json  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  ci.yml  test-pypi.yml
build_test/: .ninja_deps  .ninja_log  TraceSmithConfig.cmake  build.ninja
cli/: CMakeLists.txt  main.cpp
docker/: Dockerfile
docs/: GDB_INTEGRATION_DESIGN.md  INTEGRATION_PROGRESS.md  PERFETTO_PHASE2_PROGRESS.md  PLANNING.md  README.md  architecture.drawio  getting_started.md
examples/: CMakeLists.txt  basic_example.cpp  benchmark_10k_stacks.cpp  counter_track_example.cpp  cupti_example.cpp  goal_validation_example.cpp  memory_profiler_example.cpp  metal_example.mm  metax_benchmark.cpp  metax_example.cpp  multithread_example.cpp  phase2_example.cpp  phase3_example.cpp  phase4_example.cpp  python_example.py  realtime_tracing_example.cpp  stack_capture_example.cpp  tracy_integration_example.cpp  xray_example.cpp
include/tracesmith/: bpf_types.hpp  memory_profiler.hpp  perfetto_exporter.hpp  perfetto_proto_exporter.hpp  profiler.hpp  tracesmith.hpp  types.hpp
include/tracesmith/capture/: ascend_profiler.hpp  mcpti_profiler.hpp  profiler.hpp  rocm_profiler.hpp
include/tracesmith/common/: types.hpp
include/tracesmith/gdb/: gdb_types.hpp  gpu_debug_engine.hpp  process_controller.hpp  rsp_handler.hpp  rsp_packet.hpp
include/tracesmith/tracy/: tracy_client.hpp  tracy_exporter.hpp  tracy_gpu_context.hpp  tracy_importer.hpp
python/examples/: README.md  basic_usage.py  device_utils.py  kernel_stats.csv  kernel_timing_stats.py  memory_profiling.py  metax_profiling.py  multi_gpu_profiling.py  pytorch_hooks_profiling.py  pytorch_profiling.py  realtime_tracing.py  run_tests.py  transformers_profiling.py
python/src/: bindings.cpp
python/tracesmith/: __init__.py  __main__.py  cli.py  xctrace.py
scripts/: metal_profile.sh  test_mps.py
src/capture/: CMakeLists.txt  ascend_profiler.cpp  bpf_tracer.cpp  cupti_profiler.cpp  mcpti_profiler.cpp  profiler.cpp  rocm_profiler.cpp
src/cluster/: CMakeLists.txt  multi_gpu_profiler.cpp
src/common/: CMakeLists.txt  stack_capture.cpp
src/gdb/: CMakeLists.txt  gdb_types.cpp  gpu_debug_engine.cpp  process_controller.cpp  rsp_handler.cpp  rsp_packet.cpp
src/replay/: CMakeLists.txt  frame_capture.cpp  operation_executor.cpp  replay_engine.cpp  stream_scheduler.cpp
src/state/: CMakeLists.txt  perfetto_exporter.cpp  perfetto_proto_exporter.cpp
src/tracy/: CMakeLists.txt  tracy_exporter.cpp  tracy_gpu_context.cpp  tracy_importer.cpp
tests/: CMakeLists.txt  test_gdb_rsp.cpp  test_gpu_debug_engine.cpp  test_sbt_format.cpp  test_tracy_integration.cpp  test_types.cpp
tools/: tracesmith-gdbserver.cpp
