# Replay engine library (placeholder for Phase 4)
add_library(tracesmith-replay INTERFACE)

target_include_directories(tracesmith-replay INTERFACE
    ${CMAKE_SOURCE_DIR}/include
)

# TODO: Add replay engine implementation
# add_library(tracesmith-replay STATIC
#     replay_engine.cpp
#     stream_scheduler.cpp
#     deterministic_checker.cpp
# )
